<resources>
    <string name="app_name">Laptop_management</string>
    <string name="laptop_brand_name">Laptop Brand Name</string>
    <string name="add_laptop_brand">Add Laptop Brand</string>
    <string name="brand_rating">Brand Rating</string>
    <string name="laptop_name">Laptop Name</string>
    <string name="price">Price</string>
    <string name="display_size">Display Size</string>
    <string name="add_laptop_information">ADD LAPTOP INFORMATION</string>
    <string name="update_laptop_information">Update Laptop Information</string>
    <string name="delete_laptop_information">DELETE LAPTOP INFORMATION</string>
</resources>
