<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextLaptopName_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/laptop_name"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spn_brand_id_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent" />

    <EditText
        android:id="@+id/editTextLaptopPrice_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLaptopDisplaySize_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/display_size"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLaptopChip_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Chip Information"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLaptopRam_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="RAM Information"
        android:inputType="text" />

    <Button

        android:id="@+id/btn_update_laptop_infor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_laptop_information" />

    <Button

        android:id="@+id/btn_delete_laptop_infor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_laptop_information" />

</LinearLayout>
