<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextLaptopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/laptop_name"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spn_brand_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent" />

    <EditText
        android:id="@+id/editTextLaptopPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLaptopDisplaySize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/display_size"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLaptopChip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Chip Information"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLaptopRam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="RAM Information"
        android:inputType="text" />

    <Button

        android:id="@+id/btn_add_laptop_infor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_laptop_information" />

</LinearLayout>
